# matrix

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
.cppcheck/: suppressions.txt
.devcontainer/: Dockerfile
.github/workflows/: build-and-test.yml
include/: Matrix.h  OperatorSet.h  TestWithLogging.h
src/: Logger.cpp  Matrix.cpp  MatrixACC.cpp  MatrixMKL.cpp  MatrixOPB.cpp  benchmark.cpp  benchmark.cpp.in
tests/: CMakeLists.txt  Logger.h  Semantics.h  TestWithLogging.cpp  tMatrix.cpp  tMatrix.cpp.in
